--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 NODE_ENV = development
 PORT = 5000
 MONGO_URI = mongodb+srv://syamraju:syamraju@cluster0.svqkt8q.mongodb.net/mearnlearn?retryWrites=true&w=majority
+JWT_SECRET = abc123
